// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress in RTL renders Customisation 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full h-4 bg-trunks"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full h-4 bg-whis [&_.progress]:bg-dodoria"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-4 [&_.progress]:bg-roshi"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full h-4 bg-trunks"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full h-4 bg-whis [&_.progress]:bg-dodoria"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4 [&_.progress]:bg-roshi"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 0%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress in RTL renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-0.5"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-1"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-2"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-3"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-0.5"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-1"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-2"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-3"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress in RTL renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="25"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 25%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 50%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          />
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="100"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 25%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 50%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 100%;"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress in RTL renders WithPin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="75"
          class="w-full relative rounded-full bg-trunks/[.24] h-4"
          role="progressbar"
        >
          <div
            class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
            style="width: 75%;"
          >
            <div
              class="absolute box-content flex items-center justify-center w-8 h-8 border-2 font-medium text-moon-10-caption uppercase text-goten bg-popo border-goten rounded-full shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] before:absolute before:bg-goten before:rounded-full before:shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] after:absolute after:w-0 after:h-0 after:border-x-4 after:border-x-transparent after:-bottom-[6px] after:border-t-[6px] after:border-t-goten bottom-8 ltr:-right-[10px] rtl:-left-[10px] before:w-4 before:h-4 before:-bottom-[34px]"
            >
              75
              %
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        >
          <div
            class="absolute box-content flex items-center justify-center w-8 h-8 border-2 font-medium text-moon-10-caption uppercase text-goten bg-popo border-goten rounded-full shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] before:absolute before:bg-goten before:rounded-full before:shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] after:absolute after:w-0 after:h-0 after:border-x-4 after:border-x-transparent after:-bottom-[6px] after:border-t-[6px] after:border-t-goten bottom-8 ltr:-right-[10px] rtl:-left-[10px] before:w-4 before:h-4 before:-bottom-[34px]"
          >
            75
            %
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress renders Customisation 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full h-4 bg-trunks"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full h-4 bg-whis [&_.progress]:bg-dodoria"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4 [&_.progress]:bg-roshi"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full h-4 bg-trunks"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full h-4 bg-whis [&_.progress]:bg-dodoria"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-4 [&_.progress]:bg-roshi"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 0%;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 0%;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-0.5"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-1"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-2"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-3"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-0.5"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-1"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-2"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-3"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress renders Values 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="25"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 25%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 50%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        />
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 100%;"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 25%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 50%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 100%;"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Progress renders WithPin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="75"
        class="w-full relative rounded-full bg-trunks/[.24] h-4"
        role="progressbar"
      >
        <div
          class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
          style="width: 75%;"
        >
          <div
            class="absolute box-content flex items-center justify-center w-8 h-8 border-2 font-medium text-moon-10-caption uppercase text-goten bg-popo border-goten rounded-full shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] before:absolute before:bg-goten before:rounded-full before:shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] after:absolute after:w-0 after:h-0 after:border-x-4 after:border-x-transparent after:-bottom-[6px] after:border-t-[6px] after:border-t-goten bottom-8 ltr:-right-[10px] rtl:-left-[10px] before:w-4 before:h-4 before:-bottom-[34px]"
          >
            75
            %
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      class="w-full relative rounded-full bg-trunks/[.24] h-4"
      role="progressbar"
    >
      <div
        class="progress absolute h-full rounded-full ltr:left-0 rtl:right-0 transition-all bg-piccolo"
        style="width: 75%;"
      >
        <div
          class="absolute box-content flex items-center justify-center w-8 h-8 border-2 font-medium text-moon-10-caption uppercase text-goten bg-popo border-goten rounded-full shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] before:absolute before:bg-goten before:rounded-full before:shadow-[0_2px_8px_0_rgba(0,0,0,0.16)] after:absolute after:w-0 after:h-0 after:border-x-4 after:border-x-transparent after:-bottom-[6px] after:border-t-[6px] after:border-t-goten bottom-8 ltr:-right-[10px] rtl:-left-[10px] before:w-4 before:h-4 before:-bottom-[34px]"
        >
          75
          %
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
